--- a/HTML cheat sheet site/Index.html
+++ b/HTML cheat sheet site/Index.html
@@ -33,7 +33,7 @@ Unless you insert elements or tags designed SPECIFICALLY to insert a line break 
 <html> <!--The HTML element is the parent/ root element to EVERYTHING contained in an HTML document. Contains all elements, tags, content, etc. nested within it.-->
   <head> <!--The head element is where information about your HTML document goes. For the BROWSER to read, not for users to read.-->
     <meta charset="utf-8"> <!--This specifies the character set we want to use on our browsers to display our content. Utf-8 is the default for English alphabet characters.-->
-    <title>HTML Cheat Sheet</title> <!--This specifies the TITLE of our web page that will pop up in the web browser's title bar and on tabs in the browser. Will NOT be contained on our actual webpage itself-- that's what headings are for.-->
+    <title><u>HTML Cheat Sheet</u></title> <!--This specifies the TITLE of our web page that will pop up in the web browser's title bar and on tabs in the browser. Will NOT be contained on our actual webpage itself-- that's what headings are for.-->
   </head>
   <body> <!--The body element contains ALL of the content of the HTML page. EVERYTHING that users see, interact with, etc. EVERYTHING goes here.-->
     <!--Headings usually come first in the body element. Let's look at the heading sizes available. Refresh your index.html page opened in the web browser after writing out each!-->
@@ -56,6 +56,7 @@ Unless you insert elements or tags designed SPECIFICALLY to insert a line break 
     <p>Block-level tags take up ALL the space available to them on the web browser/ screen the web page is being viewed on. They also usually have some "padding" added around them. </p>
     <p>In HTML, "padding" refers to empty space surrounding the element and/or tags being used.</p>
     <br> <!--This is a "line break" element. It mimics hitting "enter" on your keyboard. Notice it doesn't have a closing tag. That's because it's a "self-closing" tag, or "empty" element!-->
+    <hr> <!--Sane goes for this horizontal roll-->
 
     <h2>Testing In-Line Tags/ Elements:</h2>
     <p>There are also "in-line" tags and elements. These take up ONLY the space absolutely necessary to display the content. </p>
@@ -65,6 +66,77 @@ Unless you insert elements or tags designed SPECIFICALLY to insert a line break 
     <p><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</em></p>
 
     <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</strong></p>
+    <hr>
+    <!--list time-->
+
+    <br>
+    <h2><u>Testing Lists:</u></h2>
+
+    <h3><u>Testing Unordred List</u></h3>
+    <ul>
+      <li>this</li>
+      <li>is</li>
+      <li>an</li>
+      <li>unordered</li>
+      <li>list</li>
+      </ul>
+<hr>
+      <h3><u>Testing Ordered Lists:</u></h3>
+        <ol>
+          <li>this</li>
+          <li>is</li>
+          <li>an</li>
+          <li>ordered</li>
+          <li>list</li>
+        </ol>
+<hr>
+      <h3><u> Testing Description Lists:</u><h3>
+        <dl>
+          <dt>Dog</dt>
+            <dd>A good heckin' borker</dd>
+          <dt>Cat</dt>
+            <dd>Screams for food</dd>
+          <dt>Frog</dt>
+            <dd><em>G A Y </em></dd>
+        </dl>
+<hr>
+<br>
+    <h2><u>Testing Links:</u></h2>
+    <ul>
+      <li><a href="https://rosemarymakesart.wordpress.com/"> Rosemary's Wordpress!</a></li>
+      <li><a href="https://rosemarymakesart.wordpress.com/" target="blank"> Targeted Blank Link</a></li>
+      <li><a href="Shopping List.html" target="_blank">Feed the <strong>V O I D</strong>?</a></li>
+    </ul>
+
+    <br>
+    <hr>
+    <table>
+      <thead>
+      <th>Name</th>
+      <th>Age</th>
+      <th>gender</th>
+      </thead>
+      <tbody>
+        Idk what this does
+      </tbody>
+
+      <tr> <!--First row (horizontal) of the tabe-->
+        <td>Photo one <a href="photo 1.html"><img src="images/chewtoy.jpg"</a></td>
+        <td>2</td>
+        <td>c</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>5</td>
+        <td>6</td>
+        <td>7</td>
+      </tr>
+      <tr>
+        <td>8</td>
+        <td>9</td>
+      </tr>
+    </table>
+
 
 
 
