--- a/Gallery/garbage plate.html
+++ b/Gallery/garbage plate.html
@@ -7,5 +7,12 @@
   <body>
     <h1>Garbage Plates made from locally sourced ingredients</h1>
     <img src="Gallery photos/Original/Garbage Plate.jpg" height="1000" alt="Rochester Delicacy">
+    <table>
+      <tr>
+        <td><a href="Refreshments.html"><img src="Gallery photos/Buttons/back arrow.png" height="100" width="100"></a></td>
+        <td><a href="gallery.html"target="_parent">Home</a></td>
+        <td><a href="where-am-i.html"><img src="Gallery photos/Buttons/door.png" height="100" width="100"></a></td>
+      </tr>
+    </table>
   </body>
 </html>
