--- a/Gallery/leche frita.html
+++ b/Gallery/leche frita.html
@@ -7,6 +7,12 @@
   <body>
     <h1>Leche Frita made fresh daily</h1>
     <img src="Gallery photos/Original/Leche Frita.jpg" height="1000" width="1000" alt="Leche Frita">
-
+    <table>
+      <tr>
+        <td><a href="gyeran bbang.html"><img src="Gallery photos/Buttons/back arrow.png" height="100" width="100"></a></td>
+        <td><a href="gallery.html"target="_parent">Home</a></td>
+        <td><a href="Refreshments.html"><img src="Gallery photos/Buttons/next arrow.png" height="100" width="100"></a></td>
+      </tr>
+    </table>
   </body>
 </html>
