--- a/Gallery/photo1.html
+++ b/Gallery/photo1.html
@@ -7,5 +7,11 @@
   <body>
     <h1>Assorted berries</h1>
     <img src="Gallery photos/Original/Dones_Rosemary_5_Isolated.jpg" height="1000" width="1000" alt="A photo of blackberries surrounding a raspberry symbolizing the many against the few. The raspberry is truly David against the Goliath of society.">
+    <table>
+      <tr>
+        <td><a href="gallery.html"target="_parent">Home</a></td>
+        <td><a href="beignets.html"><img src="Gallery photos/Buttons/next arrow.png" height="100" width="100"></a></td>
+      </tr>
+    </table>
   </body>
 </html>
