--- a/Gallery/Refreshments.html
+++ b/Gallery/Refreshments.html
@@ -7,5 +7,12 @@
   <body>
     <h1>Refreshments!</h1>
     <img src="Gallery photos/Original/tea and water.png" height="1000" alt="thirst quenchers">
+    <table>
+      <tr>
+        <td><a href="leche frita.html"><img src="Gallery photos/Buttons/back arrow.png" height="100" width="100"></a></td>
+        <td><a href="gallery.html"target="_parent">Home</a></td>
+        <td><a href="garbage plate.html"><img src="Gallery photos/Buttons/next arrow.png" height="100" width="100"></a></td>
+      </tr>
+    </table>
   </body>
 </html>
