--- a/Gallery/beignets.html
+++ b/Gallery/beignets.html
@@ -7,5 +7,12 @@
   <body>
   <h1>Homemade Beignets</h1>
   <img src="Gallery photos/Original/beignets.png" height="1000" alt="Beingets from the Cafe du Mond in NOLA">
+  <table>
+    <tr>
+      <td><a href="photo1.html"><img src="Gallery photos/Buttons/back arrow.png" height="100" width="100"></a></td>
+      <td><a href="gallery.html"target="_parent">Home</a></td>
+      <td><a href="gyeran bbang.html"><img src="Gallery photos/Buttons/next arrow.png" height="100" width="100"></a></td>
+    </tr>
+  </table>
   </body>
 </html>
