--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title><strong><u>Gallery</u></strong></title>
   </head>
-  <body>
+  <body style="background-color:#FEFAB8;">
     <h3><a href="index.html"target="_parent">Home</a></h3>
     <table>
       <tr>
