--- a/Gallery/gyeran bbang.html
+++ b/Gallery/gyeran bbang.html
@@ -7,5 +7,12 @@
   <body>
     <h1>Gyren ppang from a local bakery</h1>
     <img src="Gallery photos/Original/GYERAN PPANG.jpg" height="1000"  alt="Gyeran ppang">
+    <table>
+      <tr>
+        <td><a href="beignets.html"><img src="Gallery photos/Buttons/back arrow.png" height="100" width="100"></a></td>
+        <td><a href="gallery.html"target="_parent">Home</a></td>
+        <td><a href="leche frita.html"><img src="Gallery photos/Buttons/next arrow.png" height="100" width="100"></a></td>
+      </tr>
+    </table>
   </body>
 </html>
