I did another change

--- a/Gallery/A-single-sunlfower.html
+++ b/Gallery/A-single-sunlfower.html
@@ -6,7 +6,14 @@
   </head>
   <body>
     <h1>Giant organic sunflowers (one per customer)</h1>
-    <img src="Gallery photos/Original/Sunflower for larry.png" height="1000"  alt="Leche Frita">
+    <img src="Gallery photos/Original/Sunflower for larry.png" height="1000"  alt="A single sunflower">
+    <table>
+      <tr>
+        <td><a href="garbage plate.html"><img src="Gallery photos/Buttons/back arrow.png" height="100" width="100"></a></td>
+        <td><a href="gallery.html"target="_parent">Home?</a></td>
+        <td><a href="where-am-i.html"><img src="Gallery photos/Buttons/door.png" height="100" width="100"></a></td>
+      </tr>
+    </table>
 
   </body>
 </html>
