--- a/Gallery/garbage plate.html
+++ b/Gallery/garbage plate.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Garbage Plates made from locally sourced ingredients</h1>
-    <img src="Gallery photos/Original/Garbage Plate.jpg" height="1000" alt="Rochester Delicacy">
+    <img src="Gallery photos/Original/Garbage plate.jpg" height="1000" alt="Rochester Delicacy">
     <table>
       <tr>
         <td><a href="Refreshments.html"><img src="Gallery photos/Buttons/back arrow.png" height="100" width="100"></a></td>
