--- a/Gallery/Maccaroni Mouthwash.html
+++ b/Gallery/Maccaroni Mouthwash.html
@@ -10,7 +10,7 @@
       <tr>
         <td><a href="bodywash.html"><img src="Gallery photos/Buttons/back arrow.png" height="100" width="100"></a></td>
         <td><a href="the-backroom-locked.html"target="_parent">Home?</a></td>
-        <td><a href="lungs.html"><img src="Gallery photos/Buttons/next arrow.png" height="100" width="100"></a></td>
+        <td><a href="Lungs.html"><img src="Gallery photos/Buttons/next arrow.png" height="100" width="100"></a></td>
       </tr>
     </table>
   </body>
