--- a/Gallery/eye potatoes.html
+++ b/Gallery/eye potatoes.html
@@ -8,8 +8,8 @@
     <img src="Gallery photos/Original/eye Potatoes.png" height="1000" width="1000" alt="potato faces with eyes">
     <table>
       <tr>
-        <td><a href="lungs.html"><img src="Gallery photos/Buttons/back arrow.png" height="100" width="100"></a></td>
-        <td><a href="escape.html"target="_parent">Escape?</a></td>
+        <td><a href="Lungs.html"><img src="Gallery photos/Buttons/back arrow.png" height="100" width="100"></a></td>
+        <td><a href="Escape.html"target="_parent">Escape?</a></td>
       </tr>
     </table>
   </body>
