--- a/Gallery/The Backroom.html
+++ b/Gallery/The Backroom.html
@@ -7,7 +7,7 @@
   <body style="background-color:#631515;">
     <h1><strong>The Backroom</strong></h1>
     <br>
-    <h3><a href="The-backroom-locked.html">Leave the way you came?</a></h3>
+    <h3><a href="the-backroom-locked.html">Leave the way you came?</a></h3>
     <table>
       <tr>
       <td><a href="fly-coconut.html"><img src="Gallery photos/Thumbnail/fly coconut.jpg"></a></td>
