--- a/Gallery/A-single-sunlfower.html
+++ b/Gallery/A-single-sunlfower.html
@@ -11,7 +11,7 @@
       <tr>
         <td><a href="garbage plate.html"><img src="Gallery photos/Buttons/back arrow.png" height="100" width="100"></a></td>
         <td><a href="gallery.html"target="_parent">Home</a></td>
-        <td><a href="where-am-i.html"><img src="Gallery photos/Buttons/door.png" height="100" width="100"></a></td>
+        <td><a href="where-am-i.html"><img src="Gallery photos/Buttons/door.png" height="100"></a></td>
       </tr>
     </table>
 
