--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -11,7 +11,7 @@
     <hr>
     <h2><u>Navigation</u></h2><ul>
       <li><a href="about.html">About</a></li>
-      <li><a href="gallery.html">Enter<img src="Gallery photos/Buttons/enter></a></li>
+      <li><a href="gallery.html">Enter<img src="Gallery photos/Buttons/enter.png></a></li>
       <li><a href="https://rosemarymakesart.wordpress.com/" target="_blank">Rosemary's Wordpress</a></li>
     </ul>
 
