--- a/Gallery/A-single-sunlfower.html
+++ b/Gallery/A-single-sunlfower.html
@@ -5,7 +5,10 @@
     <title>Giant Sunflowers</title>
   </head>
   <body>
-    <h1>Giant organic sunflowers (one per customer)</h1>
+    <h1>Welcome! Bruno's local bodega has it all.</h1>
+    <br>
+    <hr>
+    <h2>Giant organic sunflowers (one per customer)</h2>
     <img src="Gallery photos/Original/Sunflower for larry.png" height="1000"  alt="A single sunflower">
     <table>
       <tr>
