--- a/Gallery/Refreshments.html
+++ b/Gallery/Refreshments.html
@@ -5,7 +5,10 @@
     <title>Refreshments</title>
   </head>
   <body>
-    <h1>Refreshments!</h1>
+    <h1>Welcome! Bruno's local bodega has it all.</h1>
+    <br>
+    <hr>
+    <h2>Refreshments!</h2>
     <img src="Gallery photos/Original/tea and water.png" height="1000" alt="thirst quenchers">
     <table>
       <tr>
