--- a/Gallery/The Backroom.html
+++ b/Gallery/The Backroom.html
@@ -5,6 +5,9 @@
     <title>The Backroom</title>
   </head>
   <body style="background-color:#631515;">
+    <h1>Welcome! Bruno's local bodega has it all.</h1>
+    <br>
+    <hr>
     <h1><strong>The Backroom</strong></h1>
     <br>
     <h3><a href="the-backroom-locked.html">Leave the way you came?</a></h3>
