--- a/Gallery/beignets.html
+++ b/Gallery/beignets.html
@@ -5,7 +5,10 @@
     <title>Beignets</title>
   </head>
   <body>
-  <h1>Homemade Beignets</h1>
+    <h1>Welcome! Bruno's local bodega has it all.</h1>
+    <br>
+    <hr>
+  <h2>Homemade Beignets</h2>
   <img src="Gallery photos/Original/beignets.png" height="1000" alt="Beingets from the Cafe du Mond in NOLA">
   <table>
     <tr>
