--- a/Gallery/gyeran bbang.html
+++ b/Gallery/gyeran bbang.html
@@ -5,7 +5,10 @@
     <title>Gyeran ppang</title>
   </head>
   <body>
-    <h1>Gyren ppang from a local bakery</h1>
+    <h1>Welcome! Bruno's local bodega has it all.</h1>
+    <br>
+    <hr>
+    <h2>Gyren ppang from a local bakery</h2>
     <img src="Gallery photos/Original/GYERAN PPANG.jpg" height="1000"  alt="Gyeran ppang">
     <table>
       <tr>
