--- a/Gallery/photo1.html
+++ b/Gallery/photo1.html
@@ -5,7 +5,10 @@
     <title>West Side Berries</title>
   </head>
   <body>
-    <h1>Assorted berries</h1>
+    <h1>Welcome! Bruno's local bodega has it all.</h1>
+    <br>
+    <hr>
+    <h2>Assorted berries</h2>
     <img src="Gallery photos/Original/Dones_Rosemary_5_Isolated.jpg" height="1000" width="1000" alt="A photo of blackberries surrounding a raspberry symbolizing the many against the few. The raspberry is truly David against the Goliath of society.">
     <table>
       <tr>
