--- a/Gallery/Lungs.html
+++ b/Gallery/Lungs.html
@@ -2,9 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Lungs</title>
+    <title>Kidneys</title>
   </head>
   <body style="background-color:black;">
+    <h2>Welcome! Bruno's local bodega has it all.</h2>
+    <br>
+    <hr>
     <img src="Gallery photos/Original/lungs.png" height="1000" alt="pig lungs">
     <table>
       <tr>
