--- a/Gallery/Maccaroni Mouthwash.html
+++ b/Gallery/Maccaroni Mouthwash.html
@@ -5,6 +5,9 @@
     <title>Maccaroni Mouthwash</title>
   </head>
   <body style="background-color:black;">
+    <h2>Welcome! Bruno's local bodega has it all.</h2>
+    <br>
+    <hr>
     <img src="Gallery photos/Original/Maccaroni Mouthwash.png" height="1000" alt="maccaroni mouthwash">
     <table>
       <tr>
