--- a/Gallery/eye potatoes.html
+++ b/Gallery/eye potatoes.html
@@ -5,6 +5,9 @@
     <title>Potatoes have eyes</title>
   </head>
   <body style="background-color:black;">
+    <h1>Welcome! Bruno's local bodega has it all.</h1>
+    <br>
+    <hr>
     <img src="Gallery photos/Original/eye Potatoes.png" height="1000" width="1000" alt="potato faces with eyes">
     <table>
       <tr>
