--- a/Gallery/fly-coconut.html
+++ b/Gallery/fly-coconut.html
@@ -5,6 +5,9 @@
     <title>Old Coconut</title>
   </head>
   <body style="background-color:black;">
+    <h1>Welcome! Bruno's local bodega has it all.</h1>
+    <br>
+    <hr>
     <img src="Gallery photos/Original/fly coconut.png" height="1000"  alt="coconut with a fly">
     <table>
       <tr>
