--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -5,6 +5,9 @@
     <title><strong><u>Gallery</u></strong></title>
   </head>
   <body style="background-color:#FEFAB8;">
+    <h1>Welcome! Bruno's local bodega has it all.</h1>
+    <br>
+    <hr>
     <h3><a href="index.html"target="_parent">Home</a></h3>
     <table>
       <tr>
