--- a/Gallery/garbage plate.html
+++ b/Gallery/garbage plate.html
@@ -5,7 +5,10 @@
     <title>Rochester Delicacy</title>
   </head>
   <body>
-    <h1>Garbage Plates made from locally sourced ingredients</h1>
+    <h1>Welcome! Bruno's local bodega has it all.</h1>
+    <br>
+    <hr>
+    <h2>Garbage Plates made from locally sourced ingredients</h2>
     <img src="Gallery photos/Original/Garbage plate.jpg" height="1000" alt="Rochester Delicacy">
     <table>
       <tr>
