--- a/Gallery/leche frita.html
+++ b/Gallery/leche frita.html
@@ -5,7 +5,10 @@
     <title>Leche Frita</title>
   </head>
   <body>
-    <h1>Leche Frita made fresh daily</h1>
+    <h1>Welcome! Bruno's local bodega has it all.</h1>
+    <br>
+    <hr>
+    <h2>Leche Frita made fresh daily</h2>
     <img src="Gallery photos/Original/Leche frita.jpg" height="1000" width="1000" alt="Leche Frita">
     <table>
       <tr>
