--- a/Gallery/the-backroom-locked.html
+++ b/Gallery/the-backroom-locked.html
@@ -5,6 +5,9 @@
     <title>The Backroom</title>
   </head>
   <body style="background-color:#631515;">
+    <h1>Welcome! Bruno's local bodega has it all....even you</h1>
+    <br>
+    <hr>
     <h1><strong>The Backroom</strong></h1>
     <br>
     <h3><em><u>The only way is forward</u></em></h3>
