Second to last update?
Honk

--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -9,11 +9,12 @@
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
     <hr>
-    <h2><u>Navigation</u></h2><ul>
-      <li><a href="about.html">About</a></li>
-      <li><a href="gallery.html"><img src="Gallery photos/Buttons/enter.png" height="100" ></a></li>
-    </ul>
-
-
+    <h2><u>Navigation</u></h2>
+      <a href="about.html"><img src="Gallery photos/Buttons/About.png" height="100" ></a>
+      <br>
+      <br>
+      <br>
+      <br>
+      <a href="gallery.html"><img src="Gallery photos/Buttons/enter.png" height="100" ></a>
   </body>
 </html>
