--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -15,6 +15,6 @@
       <br>
       <br>
       <br>
-      <a href="gallery.html"><img src="Gallery photos/Buttons/enter.png" height="100" ></a>
+      <a href="gallery.html"><img src="Gallery photos/Buttons/enterer.png" height="100" ></a>
   </body>
 </html>
