--- a/Gallery/about.html
+++ b/Gallery/about.html
@@ -5,9 +5,10 @@
     <title><strong><em>About the Owner</em></strong></title>
   </head>
   <body style="background-color:#B8DFFE;">
-    <h1>Welcome! Bruno's local bodega has it all.</h1>
+    <h2>Welcome! Bruno's local bodega has it all.</h2>
     <br>
     <hr>
+    <h1><strong><em>About the Owner</em></strong></h1>
 
     <h3><a href="index.html"target="_parent">Home</a></h3>
     <br>
