--- a/external-css-gallery/version1/Escapev1.html
+++ b/external-css-gallery/version1/Escapev1.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>The Exit</title>
+    <link rel=”stylesheet” href=”stylesheet1.css”>
   </head>
-  <body style="background-color:#7E5ACA;">
+  <body>
     <h1><a href="indexv1.html"><strong><u>Reenter?</u></strong></a></h1>
     <br>
     <hr>
