--- a/external-css-gallery/version1/Maccaroni Mouthwashv1.html
+++ b/external-css-gallery/version1/Maccaroni Mouthwashv1.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Maccaroni Mouthwash</title>
+    <link rel=”stylesheet” href=”stylesheet1.css”>
   </head>
-  <body style="background-color:black;">
+  <body>
     <h2>Welcome! Bruno's local bodega has it all.</h2>
     <br>
     <hr>
