--- a/external-css-gallery/version1/where-am-iv1.html
+++ b/external-css-gallery/version1/where-am-iv1.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Where am I?</title>
+    <link rel=”stylesheet” href=”stylesheet1.css”>
   </head>
-  <body style="background-color:black;">
+  <body>
     <a href="The Backroomv1.html"><img src="Gallery photos/Original/Empty hallway.png" alt="school hallway during a power outage"></a>
 
   </body>
