--- a/external-css-gallery/version1/Refreshmentsv1.html
+++ b/external-css-gallery/version1/Refreshmentsv1.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Refreshments</title>
+    <link rel=”stylesheet” href=”stylesheet1.css”> 
   </head>
   <body>
     <h1>Welcome! Bruno's local bodega has it all.</h1>
