--- a/external-css-gallery/version1/The Backroomv1.html
+++ b/external-css-gallery/version1/The Backroomv1.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>The Backroom</title>
+    <link rel=”stylesheet” href=”stylesheet1.css”>
   </head>
-  <body style="background-color:#631515;">
+  <body>
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
     <hr>
