--- a/external-css-gallery/version1/aboutv1.html
+++ b/external-css-gallery/version1/aboutv1.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title><strong><em>About the Owner</em></strong></title>
+    <link rel=”stylesheet” href=”stylesheet1.css”>
   </head>
-  <body style="background-color:#B8DFFE;">
+  <body>
     <h2>Welcome! Bruno's local bodega has it all.</h2>
     <br>
     <hr>
