--- a/external-css-gallery/version1/indexv1.html
+++ b/external-css-gallery/version1/indexv1.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title><u><<strong>Bruno's Bodega</strong></u></title>
+    <link rel=”stylesheet” href=”stylesheet1.css”>
   </head>
-  <body style="background-color:#FEFAB8;">
+  <body>
 
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
