--- a/external-css-gallery/version1/Lungsv1.html
+++ b/external-css-gallery/version1/Lungsv1.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Kidneys</title>
-    <link rel=”stylesheet” href=”stylesheet1.css”>
+    <link rel="stylesheet" href="CSS/stylesheet1.css">
   </head>
   <body>
     <h2>Welcome! Bruno's local bodega has it all.</h2>
     <br>
     <hr>
     <img src="Gallery photos/Original/lungs.png" height="1000" alt="pig lungs">
+<div class="button">
     <table>
       <tr>
         <td><a href="Maccaroni Mouthwashv1.html"><img src="Gallery photos/Buttons/back arrow.png" height="100" width="100"></a></td>
@@ -18,4 +19,5 @@
       </tr>
     </table>
   </body>
+  </div>
 </html>
