--- a/external-css-gallery/version1/Maccaroni Mouthwashv1.html
+++ b/external-css-gallery/version1/Maccaroni Mouthwashv1.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Maccaroni Mouthwash</title>
-    <link rel=”stylesheet” href=”stylesheet1.css”>
+    <link rel="stylesheet" href="CSS/stylesheet1.css">
   </head>
   <body>
     <h2>Welcome! Bruno's local bodega has it all.</h2>
     <br>
     <hr>
     <img src="Gallery photos/Original/Maccaroni Mouthwash.png" height="1000" alt="maccaroni mouthwash">
+<div class="button">
     <table>
       <tr>
         <td><a href="bodywashv1.html"><img src="Gallery photos/Buttons/back arrow.png" height="100" width="100"></a></td>
@@ -17,5 +18,6 @@
         <td><a href="Lungsv1.html"><img src="Gallery photos/Buttons/next arrow.png" height="100" width="100"></a></td>
       </tr>
     </table>
+    </div>
   </body>
 </html>
