--- a/external-css-gallery/version1/The Backroomv1.html
+++ b/external-css-gallery/version1/The Backroomv1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>The Backroom</title>
-    <link rel=”stylesheet” href=”stylesheet1.css”>
+      <link rel="stylesheet" href="CSS/stylesheet1.css">
   </head>
   <body>
     <h1>Welcome! Bruno's local bodega has it all.</h1>
@@ -11,7 +11,7 @@
     <hr>
     <h1><strong>The Backroom</strong></h1>
     <br>
-    <h3><a href="the-backroom-locked.html">Leave the way you came?</a></h3>
+    <h3><a href="the-backroom-lockedv1.html">Leave the way you came?</a></h3>
     <table>
       <tr>
       <td><a href="fly-coconutv1.html"><img src="Gallery photos/Thumbnail/fly coconut.jpg"></a></td>
