--- a/external-css-gallery/version1/aboutv1.html
+++ b/external-css-gallery/version1/aboutv1.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title><strong><em>About the Owner</em></strong></title>
-    <link rel=”stylesheet” href=”stylesheet1.css”>
+    <link rel="stylesheet" href="CSS/stylesheet1.css">
+  </head>
   </head>
   <body>
-    <h2>Welcome! Bruno's local bodega has it all.</h2>
+    <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
     <hr>
-    <h1><strong><em>About the Owner</em></strong></h1>
+    <h2><strong><em>About the Owner</em></strong></h2>
 
-    <h3><a href="index.html"target="_parent">Home</a></h3>
+    <h3><a href="indexv1.html"target="_parent">Home</a></h3>
     <br>
     <table>
       <td><img src="Gallery photos/Original/Profile picture.jpg" Height="500" width="500" alt="A photo of Bruno"</td>
