--- a/external-css-gallery/version1/bodywashv1.html
+++ b/external-css-gallery/version1/bodywashv1.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Why is it red?</title>
-    <link rel=”stylesheet” href=”stylesheet1.css”>
+    <link rel="stylesheet" href="CSS/stylesheet1.css">
   </head>
   <body>
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
     <hr>
     <img src="Gallery photos/Original/bodywash-questionmark.png" height="1000" alt="bodywash?">
+<div class="button">
     <table>
       <tr>
         <td><a href="fly-coconutv1.html"><img src="Gallery photos/Buttons/back arrow.png" height="100" width="100"></a></td>
@@ -17,5 +18,6 @@
         <td><a href="Maccaroni Mouthwashv1.html"><img src="Gallery photos/Buttons/next arrow.png" height="100" width="100"></a></td>
       </tr>
     </table>
+    </div>
   </body>
 </html>
