--- a/external-css-gallery/version1/where-am-iv1.html
+++ b/external-css-gallery/version1/where-am-iv1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Where am I?</title>
-    <link rel=”stylesheet” href=”stylesheet1.css”>
+    <link rel="stylesheet" href="CSS/stylesheet1.css">
   </head>
   <body>
     <a href="The Backroomv1.html"><img src="Gallery photos/Original/Empty hallway.png" alt="school hallway during a power outage"></a>
