--- a/external-css-gallery/version1/Refreshmentsv1.html
+++ b/external-css-gallery/version1/Refreshmentsv1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Refreshments</title>
-    <link rel=”stylesheet” href=”stylesheet1.css”> 
+    <link rel="stylesheet" href="CSS/stylesheet1.css">
   </head>
   <body>
     <h1>Welcome! Bruno's local bodega has it all.</h1>
@@ -11,6 +11,7 @@
     <hr>
     <h2>Refreshments!</h2>
     <img src="Gallery photos/Original/tea and water.png" height="1000" alt="thirst quenchers">
+<div class="button">
     <table>
       <tr>
         <td><a href="leche fritav1.html"><img src="Gallery photos/Buttons/back arrow.png" height="100" width="100"></a></td>
@@ -18,5 +19,6 @@
         <td><a href="garbage platev1.html"><img src="Gallery photos/Buttons/next arrow.png" height="100" width="100"></a></td>
       </tr>
     </table>
+    </div>
   </body>
 </html>
