--- a/external-css-gallery/version1/beignetsv1.html
+++ b/external-css-gallery/version1/beignetsv1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Beignets</title>
-    <link rel=”stylesheet” href=”stylesheet1.css”> 
+    <link rel="stylesheet" href="CSS/stylesheet1.css">
   </head>
   <body>
     <h1>Welcome! Bruno's local bodega has it all.</h1>
@@ -11,6 +11,7 @@
     <hr>
   <h2>Homemade Beignets</h2>
   <img src="Gallery photos/Original/beignets.png" height="1000" alt="Beingets from the Cafe du Mond in NOLA">
+<div class="button">
   <table>
     <tr>
       <td><a href="photo1v1.html"><img src="Gallery photos/Buttons/back arrow.png" height="100" width="100"></a></td>
@@ -18,5 +19,6 @@
       <td><a href="gyeran bbangv1.html"><img src="Gallery photos/Buttons/next arrow.png" height="100" width="100"></a></td>
     </tr>
   </table>
+</div>
   </body>
 </html>
