--- a/external-css-gallery/version1/eye potatoesv1.html
+++ b/external-css-gallery/version1/eye potatoesv1.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Potatoes have eyes</title>
-    <link rel=”stylesheet” href=”stylesheet1.css”>
+    <link rel="stylesheet" href="CSS/stylesheet1.css">
   </head>
   <body>
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
     <hr>
     <img src="Gallery photos/Original/eye Potatoes.png" height="1000" width="1000" alt="potato faces with eyes">
+<div class="button">
     <table>
       <tr>
         <td><a href="Lungsv1.html"><img src="Gallery photos/Buttons/back arrow.png" height="100" width="100"></a></td>
         <td><a href="Escapev1.html"target="_parent">Escape?</a></td>
       </tr>
     </table>
+    </div>
   </body>
 </html>
