--- a/external-css-gallery/version1/galleryv1.html
+++ b/external-css-gallery/version1/galleryv1.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title><strong><u>Gallery</u></strong></title>
-    <link rel=”stylesheet” href=”stylesheet1.css”>
+    <link rel="stylesheet" href="CSS/stylesheet1.css">
   </head>
-  <body>
+  <body class="dashed">
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
     <hr>
