--- a/external-css-gallery/version1/indexv1.html
+++ b/external-css-gallery/version1/indexv1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title><u><<strong>Bruno's Bodega</strong></u></title>
-    <link rel=”stylesheet” href=”stylesheet1.css”>
+        <link rel="stylesheet" href="CSS/stylesheet1.css">
   </head>
   <body>
 
