--- a/external-css-gallery/version1/galleryv1.html
+++ b/external-css-gallery/version1/galleryv1.html
@@ -9,7 +9,7 @@
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
     <hr>
-    <h3><a href="indexv1.html"target="_parent">Home</a></h3>
+    <h3><a href="index.html"target="_parent">Home</a></h3>
     <table>
       <tr>
       <td><a href="photo1v1.html"><img src="Gallery photos/Thumbnail/Dones_Rosemary_5_Isolated.jpg"></a></td>
