--- a/external-css-gallery/version2/fly-coconutv1.html
+++ b/external-css-gallery/version2/fly-coconutv1.html
@@ -3,17 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Old Coconut</title>
+    <link rel="stylesheet" href="CSS/stylesheet1.css">
   </head>
-  <body style="background-color:black;">
+  <body>
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
     <hr>
     <img src="Gallery photos/Original/fly coconut.png" height="1000"  alt="coconut with a fly">
+<div class="button">
     <table>
       <tr>
-        <td><a href="the-backroom-locked.html"target="_parent">Home?</a></td>
-        <td><a href="bodywash.html"><img src="Gallery photos/Buttons/next arrow.png" height="100" width="100"></a></td>
+        <td><a href="the-backroom-lockedv1.html"target="_parent">Home?</a></td>
+        <td><a href="bodywashv1.html"><img src="Gallery photos/Buttons/next arrow.png" height="100" width="100"></a></td>
       </tr>
     </table>
+    </div>
   </body>
 </html>
