--- a/external-css-gallery/version2/garbage platev1.html
+++ b/external-css-gallery/version2/garbage platev1.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Rochester Delicacy</title>
+      <link rel="stylesheet" href="CSS/stylesheet1.css">
   </head>
   <body>
     <h1>Welcome! Bruno's local bodega has it all.</h1>
@@ -10,12 +11,14 @@
     <hr>
     <h2>Garbage Plates made from locally sourced ingredients</h2>
     <img src="Gallery photos/Original/Garbage plate.jpg" height="1000" alt="Rochester Delicacy">
+<div class="button">
     <table>
       <tr>
-        <td><a href="Refreshments.html"><img src="Gallery photos/Buttons/back arrow.png" height="100" width="100"></a></td>
-        <td><a href=" gallery.html"target="_parent">Home</a></td>
-        <td><a href="A-single-sunlfower.html"><img src="Gallery photos/Buttons/next arrow.png" height="100" width="100"></a></td>
+        <td><a href="Refreshmentsv1.html"><img src="Gallery photos/Buttons/back arrow.png" height="100" width="100"></a></td>
+        <td><a href=" galleryv1.html"target="_parent">Home</a></td>
+        <td><a href="A-single-sunlfowerv1.html"><img src="Gallery photos/Buttons/next arrow.png" height="100" width="100"></a></td>
       </tr>
     </table>
+    </div>
   </body>
 </html>
