--- a/external-css-gallery/version2/photo1v1.html
+++ b/external-css-gallery/version2/photo1v1.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>West Side Berries</title>
+    <link rel="stylesheet" href="CSS/stylesheet1.css">
   </head>
   <body>
     <h1>Welcome! Bruno's local bodega has it all.</h1>
@@ -10,11 +11,13 @@
     <hr>
     <h2>Assorted berries</h2>
     <img src="Gallery photos/Original/Dones_Rosemary_5_Isolated.jpg" height="1000" width="1000" alt="A photo of blackberries surrounding a raspberry symbolizing the many against the few. The raspberry is truly David against the Goliath of society.">
+<div class="button">
     <table>
       <tr>
-        <td><a href="gallery.html"target="_parent">Home</a></td>
-        <td><a href="beignets.html"><img src="Gallery photos/Buttons/next arrow.png" height="100" width="100"></a></td>
+        <td><a href="galleryv1.html"target="_parent">Home</a></td>
+        <td><a href="beignetsv1.html"><img src="Gallery photos/Buttons/next arrow.png" height="100" width="100"></a></td>
       </tr>
     </table>
+    </div>
   </body>
 </html>
