--- a/external-css-gallery/version2/galleryv1.html
+++ b/external-css-gallery/version2/galleryv1.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title><strong><u>Gallery</u></strong></title>
-    <link rel="stylesheet" href="CSS/stylesheet1.css">
+    <link rel="stylesheet" href="CSS/stylesheet2.css">
   </head>
   <body class="dashed">
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
-    <hr>
     <h3><a href="index.html"target="_parent">Home</a></h3>
-    <table>
+    <table class="Apryll">
       <tr>
       <td><a href="photo1v1.html"><img src="Gallery photos/Thumbnail/Dones_Rosemary_5_Isolated.jpg"></a></td>
       <td><a href="beignetsv1.html"><img src="Gallery photos/Thumbnail/beignets.jpg"></a></td>
