--- a/external-css-gallery/version2/The Backroomv1.html
+++ b/external-css-gallery/version2/The Backroomv1.html
@@ -8,11 +8,10 @@
   <body>
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
-    <hr>
     <h1><strong>The Backroom</strong></h1>
     <br>
     <h3><a href="the-backroom-lockedv1.html">Leave the way you came?</a></h3>
-    <table>
+    <table class="Apryll">
       <tr>
       <td><a href="fly-coconutv1.html"><img src="Gallery photos/Thumbnail/fly coconut.jpg"></a></td>
       <td><a href="bodywashv1.html"><img src="Gallery photos/Thumbnail/bodywash-questionmark.jpg"></a></td>
