--- a/external-css-gallery/version2/index.html
+++ b/external-css-gallery/version2/index.html
@@ -9,13 +9,12 @@
 
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
-    <hr>
     <h2><u>Navigation</u></h2>
-      <a href="aboutv1.html"><img src="Gallery photos/Buttons/About.png" height="100" ></a>
+      <a href="aboutv1.html"><img src="Gallery photos/Buttons/About.png" class="Night" height="100" ></a>
       <br>
       <br>
       <br>
       <br>
-      <a href="galleryv1.html"><img src="Gallery photos/Buttons/enterer.png" height="100" ></a>
+      <a href="galleryv1.html"><img src="Gallery photos/Buttons/enterer.png" class="Night" height="100" ></a>
   </body>
 </html>
