--- a/external-css-gallery/version1/aboutv1.html
+++ b/external-css-gallery/version1/aboutv1.html
@@ -12,7 +12,7 @@
     <hr>
     <h2><strong><em>About the Owner</em></strong></h2>
 
-    <h3><a href="indexv1.html"target="_parent">Home</a></h3>
+    <h3><a href="index.html"target="_parent">Home</a></h3>
     <br>
     <table>
       <td><img src="Gallery photos/Original/Profile picture.jpg" Height="500" width="500" alt="A photo of Bruno"</td>
