My stomach isn't happy
sdf

--- a/external-css-gallery/version3/A-single-sunlfowerv1.html
+++ b/external-css-gallery/version3/A-single-sunlfowerv1.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Giant Sunflowers</title>
+    <link rel="stylesheet" href="CSS/stylesheet1.css">
   </head>
   <body>
     <h1>Welcome! Bruno's local bodega has it all.</h1>
@@ -10,13 +11,15 @@
     <hr>
     <h2>Giant organic sunflowers (one per customer)</h2>
     <img src="Gallery photos/Original/Sunflower for larry.png" height="1000"  alt="A single sunflower">
+<div class="button">
     <table>
       <tr>
-        <td><a href="garbage plate.html"><img src="Gallery photos/Buttons/back arrow.png" height="100" width="100"></a></td>
-        <td><a href="gallery.html"target="_parent">Home</a></td>
-        <td><a href="where-am-i.html"><img src="Gallery photos/Buttons/door.png" height="100"></a></td>
+        <td><a href="garbage platev1.html"><img src="Gallery photos/Buttons/back arrow.png" height="100" width="100"></a></td>
+        <td><a href="galleryv1.html"target="_parent" >Home</a></td>
+        <td><a href="where-am-iv1.html"><img src="Gallery photos/Buttons/door.png" height="100"></a></td>
+      </div>
       </tr>
     </table>
-
+</div>
   </body>
 </html>
