--- a/external-css-gallery/version3/aboutv1.html
+++ b/external-css-gallery/version3/aboutv1.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title><strong><em>About the Owner</em></strong></title>
+    <link rel="stylesheet" href="CSS/stylesheet1.css">
   </head>
-  <body style="background-color:#B8DFFE;">
-    <h2>Welcome! Bruno's local bodega has it all.</h2>
+  </head>
+  <body>
+    <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
     <hr>
-    <h1><strong><em>About the Owner</em></strong></h1>
+    <h2><strong><em>About the Owner</em></strong></h2>
 
     <h3><a href="index.html"target="_parent">Home</a></h3>
     <br>
