--- a/external-css-gallery/version3/beignetsv1.html
+++ b/external-css-gallery/version3/beignetsv1.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Beignets</title>
+    <link rel="stylesheet" href="CSS/stylesheet1.css">
   </head>
   <body>
     <h1>Welcome! Bruno's local bodega has it all.</h1>
@@ -10,12 +11,14 @@
     <hr>
   <h2>Homemade Beignets</h2>
   <img src="Gallery photos/Original/beignets.png" height="1000" alt="Beingets from the Cafe du Mond in NOLA">
+<div class="button">
   <table>
     <tr>
-      <td><a href="photo1.html"><img src="Gallery photos/Buttons/back arrow.png" height="100" width="100"></a></td>
-      <td><a href="gallery.html"target="_parent">Home</a></td>
-      <td><a href="gyeran bbang.html"><img src="Gallery photos/Buttons/next arrow.png" height="100" width="100"></a></td>
+      <td><a href="photo1v1.html"><img src="Gallery photos/Buttons/back arrow.png" height="100" width="100"></a></td>
+      <td><a href="galleryv1.html"target="_parent">Home</a></td>
+      <td><a href="gyeran bbangv1.html"><img src="Gallery photos/Buttons/next arrow.png" height="100" width="100"></a></td>
     </tr>
   </table>
+</div>
   </body>
 </html>
