--- a/external-css-gallery/version3/index.html
+++ b/external-css-gallery/version3/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title><u><<strong>Bruno's Bodega</strong></u></title>
+        <link rel="stylesheet" href="CSS/stylesheet1.css">
   </head>
-  <body style="background-color:#FEFAB8;">
+  <body>
 
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
     <hr>
     <h2><u>Navigation</u></h2>
-      <a href="about.html"><img src="Gallery photos/Buttons/About.png" height="100" ></a>
+      <a href="aboutv1.html"><img src="Gallery photos/Buttons/About.png" height="100" ></a>
       <br>
       <br>
       <br>
       <br>
-      <a href="gallery.html"><img src="Gallery photos/Buttons/enterer.png" height="100" ></a>
+      <a href="galleryv1.html"><img src="Gallery photos/Buttons/enterer.png" height="100" ></a>
   </body>
 </html>
