I took a tums so I feel better

--- a/external-css-gallery/version2/beignetsv1.html
+++ b/external-css-gallery/version2/beignetsv1.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Beignets</title>
     <link rel="stylesheet" href="CSS/stylesheet2.css">
+    <link href='https://fonts.googleapis.com/css?family=Lexend Peta' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Lexend Deca' rel='stylesheet'>
+  </head>
   </head>
   <body>
     <h1>Welcome! Bruno's local bodega has it all.</h1>
