--- a/external-css-gallery/version2/where-am-iv1.html
+++ b/external-css-gallery/version2/where-am-iv1.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Where am I?</title>
     <link rel="stylesheet" href="CSS/stylesheet2.css">
+    <link href='https://fonts.googleapis.com/css?family=Lexend Peta' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Lexend Deca' rel='stylesheet'>
   </head>
   <body>
     <a href="The Backroomv1.html"><img src="Gallery photos/Original/Empty hallway.png" alt="school hallway during a power outage"></a>
