--- a/external-css-gallery/version2/aboutv1.html
+++ b/external-css-gallery/version2/aboutv1.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title><strong><em>About the Owner</em></strong></title>
     <link rel="stylesheet" href="CSS/stylesheet2.css">
+    <link href='https://fonts.googleapis.com/css?family=Lexend Peta' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Lexend Deca' rel='stylesheet'>
+  </head>
   </head>
   </head>
   <body>
