--- a/external-css-gallery/version2/galleryv1.html
+++ b/external-css-gallery/version2/galleryv1.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title><strong><u>Gallery</u></strong></title>
     <link rel="stylesheet" href="CSS/stylesheet2.css">
+    <link href='https://fonts.googleapis.com/css?family=Lexend Peta' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Lexend Deca' rel='stylesheet'>
+  </head>
   </head>
   <body class="dashed">
     <h1>Welcome! Bruno's local bodega has it all.</h1>
