--- a/external-css-gallery/version2/index.html
+++ b/external-css-gallery/version2/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title><u><<strong>Bruno's Bodega</strong></u></title>
         <link rel="stylesheet" href="CSS/stylesheet2.css">
+        <link href='https://fonts.googleapis.com/css?family=Lexend Peta' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Lexend Deca' rel='stylesheet'>
+      </head>
   </head>
   <body>
 
