no heart attacks please

--- a/external-css-gallery/version3/Maccaroni Mouthwashv1.html
+++ b/external-css-gallery/version3/Maccaroni Mouthwashv1.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Maccaroni Mouthwash</title>
     <link rel="stylesheet" href="CSS/stylesheet3.css">
+      <link href='https://fonts.googleapis.com/css?family=Macondo Swash Caps' rel='stylesheet'>
   </head>
   <body>
     <h2>Welcome! Bruno's local bodega has it all.</h2>
