--- a/external-css-gallery/version3/aboutv1.html
+++ b/external-css-gallery/version3/aboutv1.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title><strong><em>About the Owner</em></strong></title>
     <link rel="stylesheet" href="CSS/stylesheet3.css">
+      <link href='https://fonts.googleapis.com/css?family=Macondo Swash Caps' rel='stylesheet'>
   </head>
   </head>
   <body>
