--- a/external-css-gallery/version3/Escapev1.html
+++ b/external-css-gallery/version3/Escapev1.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>The Exit</title>
     <link rel="stylesheet" href="CSS/stylesheet3.css">
+      <link href='https://fonts.googleapis.com/css?family=Macondo Swash Caps' rel='stylesheet'>
   </head>
   <body>
     <h1><a href="index.html"><strong><u>Reenter?</u></strong></a></h1>
