--- a/external-css-gallery/version3/fly-coconutv1.html
+++ b/external-css-gallery/version3/fly-coconutv1.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Old Coconut</title>
     <link rel="stylesheet" href="CSS/stylesheet3.css">
+      <link href='https://fonts.googleapis.com/css?family=Macondo Swash Caps' rel='stylesheet'>
   </head>
   <body>
     <h1>Welcome! Bruno's local bodega has it all.</h1>
