--- a/external-css-gallery/version3/A-single-sunlfowerv1.html
+++ b/external-css-gallery/version3/A-single-sunlfowerv1.html
@@ -5,12 +5,13 @@
     <title>Giant Sunflowers</title>
     <link rel="stylesheet" href="CSS/stylesheet3.css">
       <link href='https://fonts.googleapis.com/css?family=Macondo Swash Caps' rel='stylesheet'>
+      <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet'>
   </head>
   <body>
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
-    <hr>
     <h2>Giant organic sunflowers (one per customer)</h2>
+    <hr>
     <img src="Gallery photos/Original/Sunflower for larry.png" height="1000"  alt="A single sunflower">
 <div class="button">
     <table>
