--- a/external-css-gallery/version3/Maccaroni Mouthwashv1.html
+++ b/external-css-gallery/version3/Maccaroni Mouthwashv1.html
@@ -5,6 +5,7 @@
     <title>Maccaroni Mouthwash</title>
     <link rel="stylesheet" href="CSS/stylesheet3.css">
       <link href='https://fonts.googleapis.com/css?family=Macondo Swash Caps' rel='stylesheet'>
+      <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet'>
   </head>
   <body>
     <h2>Welcome! Bruno's local bodega has it all.</h2>
