--- a/external-css-gallery/version3/The Backroomv1.html
+++ b/external-css-gallery/version3/The Backroomv1.html
@@ -5,15 +5,16 @@
     <title>The Backroom</title>
       <link rel="stylesheet" href="CSS/stylesheet3.css">
         <link href='https://fonts.googleapis.com/css?family=Macondo Swash Caps' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet'>
   </head>
   <body>
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
     <hr>
-    <h1><strong>The Backroom</strong></h1>
+    <h2><strong>The Backroom</strong></h2>
     <br>
     <h3><a href="the-backroom-lockedv1.html">Leave the way you came?</a></h3>
-    <table>
+    <table class="Apryll">
       <tr>
       <td><a href="fly-coconutv1.html"><img src="Gallery photos/Thumbnail/fly coconut.jpg"></a></td>
       <td><a href="bodywashv1.html"><img src="Gallery photos/Thumbnail/bodywash-questionmark.jpg"></a></td>
