--- a/external-css-gallery/version3/aboutv1.html
+++ b/external-css-gallery/version3/aboutv1.html
@@ -5,14 +5,14 @@
     <title><strong><em>About the Owner</em></strong></title>
     <link rel="stylesheet" href="CSS/stylesheet3.css">
       <link href='https://fonts.googleapis.com/css?family=Macondo Swash Caps' rel='stylesheet'>
+      <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet'>
   </head>
   </head>
   <body>
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
-    <hr>
     <h2><strong><em>About the Owner</em></strong></h2>
-
+<hr>
     <h3><a href="index.html"target="_parent">Home</a></h3>
     <br>
     <table>
