--- a/external-css-gallery/version3/galleryv1.html
+++ b/external-css-gallery/version3/galleryv1.html
@@ -5,13 +5,14 @@
     <title><strong><u>Gallery</u></strong></title>
     <link rel="stylesheet" href="CSS/stylesheet3.css">
     <link href='https://fonts.googleapis.com/css?family=Macondo Swash Caps' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet'>
   </head>
   <body class="dashed">
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
     <hr>
     <h3><a href="index.html"target="_parent">Home</a></h3>
-    <table>
+    <table class=Apryll>
       <tr>
       <td><a href="photo1v1.html"><img src="Gallery photos/Thumbnail/Dones_Rosemary_5_Isolated.jpg"></a></td>
       <td><a href="beignetsv1.html"><img src="Gallery photos/Thumbnail/beignets.jpg"></a></td>
