--- a/external-css-gallery/version3/index.html
+++ b/external-css-gallery/version3/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title><u><<strong>Bruno's Bodega</strong></u></title>
         <link rel="stylesheet" href="CSS/stylesheet3.css">
-          <link href='https://fonts.googleapis.com/css?family=Macondo Swash Caps' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Macondo Swash Caps' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet'>
   </head>
   <body>
 
