--- a/external-css-gallery/version3/where-am-iv1.html
+++ b/external-css-gallery/version3/where-am-iv1.html
@@ -5,6 +5,7 @@
     <title>Where am I?</title>
     <link rel="stylesheet" href="CSS/stylesheet3.css">
       <link href='https://fonts.googleapis.com/css?family=Macondo Swash Caps' rel='stylesheet'>
+      <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet'>
   </head>
   <body>
     <a href="The Backroomv1.html"><img src="Gallery photos/Original/Empty hallway.png" alt="school hallway during a power outage"></a>
