last push for sure

--- a/external-css-gallery/version2/A-single-sunlfowerv1.html
+++ b/external-css-gallery/version2/A-single-sunlfowerv1.html
@@ -12,7 +12,7 @@
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
     <h2>Giant organic sunflowers (one per customer)</h2>
-    <img src="Gallery photos/Original/Sunflower for larry.png" height="1000"  alt="A single sunflower">
+    <img src="Gallery photos/Original/Sunflower for larry.png" class="Night" height="1000"  alt="A single sunflower">
 <div class="button">
     <table>
       <tr>
