--- a/external-css-gallery/version2/Refreshmentsv1.html
+++ b/external-css-gallery/version2/Refreshmentsv1.html
@@ -12,7 +12,7 @@
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
     <h2>Refreshments!</h2>
-    <img src="Gallery photos/Original/tea and water.png" height="1000" alt="thirst quenchers">
+    <img src="Gallery photos/Original/tea and water.png" class="Night" height="1000" alt="thirst quenchers">
 <div class="button">
     <table>
       <tr>
