--- a/external-css-gallery/version2/eye potatoesv1.html
+++ b/external-css-gallery/version2/eye potatoesv1.html
@@ -11,7 +11,7 @@
   <body>
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
-    <img src="Gallery photos/Original/eye Potatoes.png" height="1000" width="1000" alt="potato faces with eyes">
+    <img src="Gallery photos/Original/eye Potatoes.png" class="Night" height="1000" width="1000" alt="potato faces with eyes">
 <div class="button">
     <table>
       <tr>
