--- a/external-css-gallery/version3/aboutv1.html
+++ b/external-css-gallery/version3/aboutv1.html
@@ -16,7 +16,7 @@
     <h3><a href="index.html"target="_parent">Home</a></h3>
     <br>
     <table>
-      <td><img src="Gallery photos/Original/Profile picture.jpg" Height="500" width="500" alt="A photo of Bruno"</td>
+      <td><img src="Gallery photos/Original/Profile picture.jpg" class="Apryll" Height="500" width="500" alt="A photo of Bruno"</td>
     </table>
     <p>Bruno's Bodega was established in 1953 by Bruno Sidónio Zini Senior. The bodega has been passed down and has remained a family buisness since it's creation. Bruno Sidónio Zini III is the third in line of honorable shopkeeps to uphold the tradition his grandfather had started. Bruno is even in the process of training the next heir to the shop, Brunoesse, to take over the shop when he no longer can.</p>
 
