--- a/external-css-gallery/version3/beignetsv1.html
+++ b/external-css-gallery/version3/beignetsv1.html
@@ -12,7 +12,7 @@
     <br>
     <hr>
   <h2>Homemade Beignets</h2>
-  <img src="Gallery photos/Original/beignets.png" height="1000" alt="Beingets from the Cafe du Mond in NOLA">
+  <img src="Gallery photos/Original/beignets.png" class="Apryll" height="1000" alt="Beingets from the Cafe du Mond in NOLA">
 <div class="button">
   <table>
     <tr>
