--- a/external-css-gallery/version3/bodywashv1.html
+++ b/external-css-gallery/version3/bodywashv1.html
@@ -11,7 +11,7 @@
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
     <hr>
-    <img src="Gallery photos/Original/bodywash-questionmark.png" height="1000" alt="bodywash?">
+    <img src="Gallery photos/Original/bodywash-questionmark.png" class="Apryll" height="1000" alt="bodywash?">
 <div class="button">
     <table>
       <tr>
