--- a/external-css-gallery/version2/Lungsv1.html
+++ b/external-css-gallery/version2/Lungsv1.html
@@ -11,7 +11,7 @@
   <body>
     <h2>Welcome! Bruno's local bodega has it all.</h2>
     <br>
-    <img src="Gallery photos/Original/lungs.png" height="1000" alt="pig lungs">
+    <img src="Gallery photos/Original/lungs.png" class="Night" height="1000" alt="pig lungs">
 <div class="button">
     <table>
       <tr>
