--- a/external-css-gallery/version2/fly-coconutv1.html
+++ b/external-css-gallery/version2/fly-coconutv1.html
@@ -11,7 +11,7 @@
   <body>
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
-    <img src="Gallery photos/Original/fly coconut.png" height="1000"  alt="coconut with a fly">
+    <img src="Gallery photos/Original/fly coconut.png" class="Night" height="1000"  alt="coconut with a fly">
 <div class="button">
     <table>
       <tr>
