--- a/external-css-gallery/version2/leche fritav1.html
+++ b/external-css-gallery/version2/leche fritav1.html
@@ -12,7 +12,7 @@
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
     <h2>Leche Frita made fresh daily</h2>
-    <img src="Gallery photos/Original/Leche frita.jpg" height="1000" width="1000" alt="Leche Frita">
+    <img src="Gallery photos/Original/Leche frita.jpg" class="Night" height="1000" width="1000" alt="Leche Frita">
 <div class="button">
     <table>
       <tr>
