--- a/external-css-gallery/version2/photo1v1.html
+++ b/external-css-gallery/version2/photo1v1.html
@@ -12,7 +12,7 @@
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
     <h2>Assorted berries</h2>
-    <img src="Gallery photos/Original/Dones_Rosemary_5_Isolated.jpg" height="1000" width="1000" alt="A photo of blackberries surrounding a raspberry symbolizing the many against the few. The raspberry is truly David against the Goliath of society.">
+    <img src="Gallery photos/Original/Dones_Rosemary_5_Isolated.jpg" class="Night" height="1000" width="1000" alt="A photo of blackberries surrounding a raspberry symbolizing the many against the few. The raspberry is truly David against the Goliath of society.">
 <div class="button">
     <table>
       <tr>
