--- a/external-css-gallery/version3/A-single-sunlfowerv1.html
+++ b/external-css-gallery/version3/A-single-sunlfowerv1.html
@@ -12,7 +12,7 @@
     <br>
     <h2>Giant organic sunflowers (one per customer)</h2>
     <hr>
-    <img src="Gallery photos/Original/Sunflower for larry.png" height="1000"  alt="A single sunflower">
+    <img src="Gallery photos/Original/Sunflower for larry.png" class="Apryll" height="1000"  alt="A single sunflower">
 <div class="button">
     <table>
       <tr>
