--- a/external-css-gallery/version3/Refreshmentsv1.html
+++ b/external-css-gallery/version3/Refreshmentsv1.html
@@ -12,7 +12,7 @@
     <br>
     <hr>
     <h2>Refreshments!</h2>
-    <img src="Gallery photos/Original/tea and water.png" height="1000" alt="thirst quenchers">
+    <img src="Gallery photos/Original/tea and water.png" class="Apryll" height="1000" alt="thirst quenchers">
 <div class="button">
     <table>
       <tr>
