--- a/external-css-gallery/version3/fly-coconutv1.html
+++ b/external-css-gallery/version3/fly-coconutv1.html
@@ -11,7 +11,7 @@
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
     <hr>
-    <img src="Gallery photos/Original/fly coconut.png" height="1000"  alt="coconut with a fly">
+    <img src="Gallery photos/Original/fly coconut.png" class="Apryll" height="1000"  alt="coconut with a fly">
 <div class="button">
     <table>
       <tr>
