--- a/external-css-gallery/version3/galleryv1.html
+++ b/external-css-gallery/version3/galleryv1.html
@@ -12,7 +12,7 @@
     <br>
     <hr>
     <h3><a href="index.html"target="_parent">Home</a></h3>
-    <table class=Apryll>
+    <table class="Apryll">
       <tr>
       <td><a href="photo1v1.html"><img src="Gallery photos/Thumbnail/Dones_Rosemary_5_Isolated.jpg"></a></td>
       <td><a href="beignetsv1.html"><img src="Gallery photos/Thumbnail/beignets.jpg"></a></td>
