--- a/external-css-gallery/version3/garbage platev1.html
+++ b/external-css-gallery/version3/garbage platev1.html
@@ -12,7 +12,7 @@
     <br>
     <hr>
     <h2>Garbage Plates made from locally sourced ingredients</h2>
-    <img src="Gallery photos/Original/Garbage plate.jpg" height="1000" alt="Rochester Delicacy">
+    <img src="Gallery photos/Original/Garbage plate.jpg" class="Apryll" height="1000" alt="Rochester Delicacy">
 <div class="button">
     <table>
       <tr>
