--- a/external-css-gallery/version3/gyeran bbangv1.html
+++ b/external-css-gallery/version3/gyeran bbangv1.html
@@ -12,7 +12,7 @@
     <br>
     <hr>
     <h2>Gyren ppang from a local bakery</h2>
-    <img src="Gallery photos/Original/GYERAN PPANG.jpg" height="1000"  alt="Gyeran ppang">
+    <img src="Gallery photos/Original/GYERAN PPANG.jpg" class="Apryll" height="1000"  alt="Gyeran ppang">
 <div class="button">
     <table>
       <tr>
