last minute save

--- a/external-css-gallery/version2/beignetsv1.html
+++ b/external-css-gallery/version2/beignetsv1.html
@@ -12,7 +12,7 @@
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
   <h2>Homemade Beignets</h2>
-  <img src="Gallery photos/Original/beignets.png" class="Night" height="1000" alt="Beingets from the Cafe du Mond in NOLA">
+  <img src="Gallery photos/Original/beignets.png" height="1000" alt="Beingets from the Cafe du Mond in NOLA">
 <div class="button">
   <table>
     <tr>
