--- a/external-css-gallery/version2/garbage platev1.html
+++ b/external-css-gallery/version2/garbage platev1.html
@@ -12,7 +12,7 @@
     <h1>Welcome! Bruno's local bodega has it all.</h1>
     <br>
     <h2>Garbage Plates made from locally sourced ingredients</h2>
-    <img src="Gallery photos/Original/Garbage plate.jpg" class="Night" height="1000" alt="Rochester Delicacy">
+    <img src="Gallery photos/Original/Garbage plate.jpg"  height="1000" alt="Rochester Delicacy">
 <div class="button">
     <table>
       <tr>
